# MultiThreaded-Object-Detection-and-Tracking-cpp

./: .gitignore  CMakeLists.txt  README.md  content
include/: frame_grabber.h  frame_writer.h  message_queue.h  point2D.h  tracking_msg.h
include/Detector/: object_detector.h  yolo_object_detector.h
include/Tracker/: hungarian.h  kalman_filter.h  kalman_track.h  object_tracker.h  track.h  tracker.h
src/: frame_grabber.cpp  frame_writer.cpp  hungarian.cpp  kalman_filter.cpp  kalman_track.cpp  main.cpp  object_tracker.cpp  tracker.cpp  yolo_object_detector.cpp
